# q2nsviz

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.doxygen/: Doxyfile  footer.html
.doxygen/css/: custom.css
.doxygen/js/: site-custom.js
.github/workflows/: docs.yml
doc/: q2nsviz-doc.py
example_traces/: q2nsviz-entanglement-distribution-example.json  q2nsviz-graphstate-gen-example.json  q2nsviz-repeater-swap-example.json  q2nsviz-teleportation-example.json
q2nsviz/: __init__.py  __main__.py  cli.py  logic.py
q2nsviz/example_traces/: q2nsviz-channel-loss-example.json
q2nsviz/ui/: __init__.py  canvas.py  charts.py  panels.py  theme.py  window.py
test/: conftest.py  helpers.py  test_charts.py  test_examples.py  test_parser.py  test_state_manager.py
